Added booking price counters
